fix reponsive cover and non justify text-align

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -82,7 +82,6 @@ a.card, a.card:hover {
   p {
     font-size: 0.7em;
     word-wrap: break-word;
-    word-break: break-all;
   }
 }
 .archive__item {
