--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -114,7 +114,7 @@ body {
   li,
   dl {
     font-size: 1em;
-    text-align: justify;
+    // text-align: justify;
   }
 
   /* paragraph indents */
@@ -575,5 +575,21 @@ body {
     @include breakpoint($x-large) {
       padding-right: 0;
     }
+  }
+}
+
+.logo-cover {
+  position: absolute;
+  top: 3em;bottom: 3em;
+  right: 12%;
+  z-index: -1;
+  max-width: 76%;
+  display: flex;
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    object-fit: contain
   }
 }
